--- a/app/src/main/res/layout/fragment_daily_hadis.xml
+++ b/app/src/main/res/layout/fragment_daily_hadis.xml
@@ -8,4 +8,18 @@
     tools:context=".MainActivity"
     tools:visibility="visible">
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="268dp"
+        android:layout_height="144dp"
+        android:gravity="center"
+        android:text="Хадис"
+        android:textColor="@color/purple_300"
+        android:textSize="41sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
