--- a/app/src/main/res/layout/fragment_counter.xml
+++ b/app/src/main/res/layout/fragment_counter.xml
@@ -11,7 +11,7 @@
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/plus"
         android:layout_width="135dp"
         android:layout_height="92dp"
         android:gravity="center"
