--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,7 +9,7 @@
 
         <item name="android:textColorHint">@android:color/white</item>
         <item name="colorAccent">@color/purple_300</item>
-        <item name="colorSecondary">@color/purple_300</item>
+        <item name="colorSecondary">@color/white</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
