--- a/app/src/main/res/layout/fragment_salavat.xml
+++ b/app/src/main/res/layout/fragment_salavat.xml
@@ -75,14 +75,13 @@
 
     <Button
         android:id="@+id/back"
-        android:layout_width="60dp"
+        android:layout_width="50dp"
         android:layout_height="48dp"
-        android:text="☚"
-        android:gravity="center"
-        android:textSize="20sp"
+        android:background="@drawable/ic_baseline_arrow_circle_left_24"
+        app:cornerRadius="28dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.002"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
